@@ -1,5 +1,7 @@
 2009-01-03  higepon  <higepon@users.sourceforge.jp>
 
+        * main.cpp (main): Added --loadpath option.
+
         * Added .mosh.sls prefix file loading.
 
         * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss : Use MOSH_LOADPATH for adding load-library-path.
